# Directory-Tree-Generator

./: .gitignore  README.md  main.py  output_file.md  pyproject.toml  tree.py
.github/workflows/: pylint.yml
app/: cli.py  gen_tree.py  main.py
rptree/: cli.py  rptree.py
tests/: main.py
